// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. macros: 1. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp('a');


      ↓ ↓ ↓ ↓ ↓ ↓

/a/;

`;

exports[`macros 2. macros: 2. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp('abc');


      ↓ ↓ ↓ ↓ ↓ ↓

/abc/;

`;

exports[`macros 3. macros: 3. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(['d', 'e', 'f']);


      ↓ ↓ ↓ ↓ ↓ ↓

/def/;

`;

exports[`macros 4. macros: 4. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(['d', 'e', 'f']);


      ↓ ↓ ↓ ↓ ↓ ↓

/def/;

`;
